# FlowTracker

./: .gitignore  LICENSE  README.md  bootstrap.sh  index.html  package.json  pnpm-lock.yaml  task.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  flow-tracker-feature-request.md
.github/agents/: flowtracker.agent.md
.github/workflows/: release.yml
src/: App.css  App.tsx  Layout.tsx  api.ts  i18n.ts  index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  services.rs  sync.rs  watcher.rs
src/components/: AccessibilityModal.tsx  ExportModal.tsx
src/lib/: ai.ts  i18nResources.ts
src/pages/: Dashboard.tsx  Projects.tsx  Settings.tsx  Whitelist.tsx
tao-patched/: Cargo.toml
tao-patched/src/platform_impl/macos/: app_delegate.rs  app_state.rs
