[package]
name = "FlowTracker"
version = "0.1.7"
description = "Flow Tracker — Privacy-first automatic time tracking"
authors = ["Carmelo Di Venti <carmelodiventi@gmail.com>"]
edition = "2021"
rust-version = "1.77"

# The _lib suffix makes the lib name unique from the bin name,
# avoiding a naming collision on Windows (cargo issue #8519).
[lib]
name = "flow_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
active-win-pos-rs = "0.8"
log            = "0.4"
env_logger     = "0.11"
tauri-plugin-dialog = "2.0.0-rc.8"
tauri-plugin-fs = "2.0.0-rc.6"
mongodb = "3.2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics  = { version = "0.23", features = ["highsierra"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi         = { version = "0.3", features = ["winuser", "sysinfoapi"] }

[profile.release]
opt-level  = "s"   # optimise for size
lto        = true
codegen-units = 1
panic      = "abort"
strip      = true

[patch.crates-io]
tao = { path = "../tao-patched" }

